update backend service + db
