# plugins/api-platform-backend/docs/backend-openapi.yaml
@@ -3,24 +3,19 @@ info:
   title: Backstage Api Platform Backend
   description: OpenAPI exposed but the Backstage Api Platform Backend
   version: 0.0.1
-  contact:
-    name: Me
-    email: me@carth.xyz
-    url: https://carth.xyz
-
+  x-api-type: inner
+  x-application-code: depf
 servers:
-  - url: https://api.example.com/v1
-    description: Optional server description, e.g. Main (production) server
-  - url: https://staging-api.example.com
-    description: Optional server description, e.g. Internal staging server for testing
-
+  - description: Test URL
+    url: https://demo.backstage.xyz
+ 
 tags:
   - name: ApiPlatformBackend
     description: Operations about services
-
+ 
 paths:
   ###############################################################################
-  /api/api-platform/catalog:
+  /catalog:
     # -[POST]----------------------------------------------------------------------
     post:
       tags:
@@ -28,70 +23,63 @@ paths:
       description: Register or refresh a Backstage catalog
       operationId: registerCatalog
       requestBody:
-        description: The catalog to register or refresh
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Catalog'
+              $ref: '#/components/schemas/backstageCatalog'
       responses:
         "201":
           description: "Created"
-        "400":
-          description: Bad request.
-        "401":
-          description: Authorization information is missing or invalid.
-        "500":
-          description: Unexpected error.
+        '400':
+          $ref: "#/components/responses/errorBadRequest"
+        '401':
+          $ref: "#/components/responses/errorUnauthorized"
+        '404':
+          $ref: "#/components/responses/errorNotFound"
+        '500':
+          $ref: "#/components/responses/errorServerError"
+        '503':
+          $ref: "#/components/responses/errorServiceUnavailable"
   ###############################################################################
-  /api/api-platform/services/{serviceName}/{serviceVersion}/{containerVersion}:
+  /service-informations:
     # -[POST]----------------------------------------------------------------------
     post:
       tags:
         - ApiPlatformBackend
       description: TODO
-      operationId: addServiceApis
-      parameters:
-        - name: serviceName
-          in: path
-          required: true
-          description: The name of the service
-          schema:
-            type: string
-        - name: serviceVersion
-          in: path
-          required: true
-          description: The version of the service
-          schema:
-            type: string
-        - name: containerVersion
-          in: path
-          required: true
-          description: The version of the container
-          schema:
-            type: string
+      operationId: addServiceInformation
+      security:
+        - { }
+        - JWT: [ ]
       requestBody:
-        description: The APIs provided and consumed by the service
+        description: The service information to add
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Apis'
+              $ref: '#/components/schemas/backstageServiceInformation'
       responses:
         "201":
           description: "Created"
-        "400":
-          description: Bad request.
-        "401":
-          description: Authorization information is missing or invalid.
-        "500":
-          description: Unexpected error.
+        '401':
+          $ref: "#/components/responses/errorUnauthorized"
+        '404':
+          $ref: "#/components/responses/errorNotFound"
+        '500':
+          $ref: "#/components/responses/errorServerError"
+        '503':
+          $ref: "#/components/responses/errorServiceUnavailable"
+  /service-informations/{serviceName}/{serviceVersion}/{containerVersion}:
     # -[GET]-----------------------------------------------------------------------
     get:
       tags:
         - ApiPlatformBackend
       description: TODO
-      operationId: getServiceApis
+      operationId: getServiceInformation
+      security:
+        - { }
+        - JWT: [ ]
       parameters:
         - name: serviceName
           in: path
@@ -113,23 +101,62 @@ paths:
             type: string
       responses:
         "200": # status code
-          description: A JSON array of user names
+          description: The service information
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Apis'
-        "400":
-          description: Bad request.
-        "401":
-          description: Authorization information is missing or invalid.
-        "404":
-          description: A service with the specified name, version and container version was not found.
-        "500":
-          description: Unexpected error.
+                $ref: '#/components/schemas/backstageServiceInformation'
+        '401':
+          $ref: "#/components/responses/errorUnauthorized"
+        '404':
+          $ref: "#/components/responses/errorNotFound"
+        '500':
+          $ref: "#/components/responses/errorServerError"
+        '503':
+          $ref: "#/components/responses/errorServiceUnavailable"
 # -[Schemas]-------------------------------------------------------------------
 components:
+  responses:
+    errorUnauthorized:
+      description: "Unauthorized."
+      content:
+        application/problem+json:
+          schema:
+            type: string
+    errorBadRequest:
+      description: "Wrong parameter value or format"
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/problem'
+    errorNotFound:
+      description: "Resource not found."
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/problem'
+    errorServerError:
+      description: "Internal Server Error."
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/problem'
+    errorServiceUnavailable:
+      description: "Service Unavailable."
+      content:
+        text/plain:
+          schema:
+            type: string
   schemas:
-    Catalog:
+    problem:
+      $ref: 'https://swaggerhub.belwired.net/api-domains/common/common-components/1.3.3#/components/schemas/problem'
+    applicationCode:
+      type: string
+      description: "Application code (DEFL)"
+      minLength: 4
+      maxLength: 4
+      example: "desb"
+    backstageCatalog:
       type: object
       properties:
         target:
@@ -137,19 +164,19 @@ components:
         kind:
           type: string
       example:
-        target: https://backstage.example.com
+        target: https://dev.azure.com/organization/defl/_git/repository?path=/api/desb/desb-infirmary/2.0.9/catalog-info.yaml
         kind: 'API'
-    Apis:
+    apiDependencies:
       type: object
       properties:
         consumedApis:
           type: array
           items:
-            $ref: '#/components/schemas/Api'
+            $ref: '#/components/schemas/apiDependency'
         providedApis:
           type: array
           items:
-            $ref: '#/components/schemas/Api'
+            $ref: '#/components/schemas/apiDependency'
       example:
         consumedApis:
           - ServiceA
@@ -157,6 +184,50 @@ components:
         providedApis:
           - ServiceC
           - ServiceD
-    Api:
+    apiDependency:
       type: string
       example: "ServiceA"
+    backstageServiceInformation:
+      required:
+        - applicationCode
+        - serviceName
+        - serviceVersion
+        - containerName
+        - containerVersion
+        - repository
+        - sonarQubeProjectKey
+        - apiDependencies
+      properties:
+        applicationCode:
+          $ref: '#/components/schemas/applicationCode'
+        serviceName:
+          type: string
+          description: "Service name"
+          example: "my-service"
+        serviceVersion:
+          type: string
+          description: "Service version"
+          example: "1"
+        containerName:
+          type: string
+          description: "Container name"
+          example: "my-service-backend"
+        containerVersion:
+          type: string
+          description: "Container version"
+          example: "20250124.1"
+        repository:
+          type: string
+          description: "Azure DevOps repository name"
+          example: "desb-demo-infirmary-backend"
+        sonarQubeProjectKey:
+          type: string
+          description: "SonarQube project key"
+          example: "belfius.desb.infirmary:infirmary-backend-parent"
+        apiDependencies:
+          $ref: '#/components/schemas/apiDependencies'
+  securitySchemes:
+    JWT:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
