# plugins/api-platform-backend/src/router.ts
@@ -10,15 +10,15 @@ import { createApiPlatformService } from './services/ApiPlatformService';
 import { createCatalogPlatformService } from './services/CatalogPlatformService';
 import { createServicePlatformService } from './services/ServicePlatformService';
 import { createSystemPlatformService } from './services/SystemPlatformService';
-import { ServiceApisDefinition } from '@internal/plugin-api-platform-common';
-
+import { ServiceInformation } from '@internal/plugin-api-platform-common';
+ 
 export interface RouterOptions {
-  logger: LoggerService;  
+  logger: LoggerService;
   catalogClient: CatalogApi;
   database: DatabaseService;
   auth: AuthService;
 }
-
+ 
 function validateRequestBody(req: Request) {
   const body = req.body;
   if (!body) {
@@ -30,13 +30,13 @@ function validateRequestBody(req: Request) {
     throw new InputError('Empty request body');
   }
 }
-
+ 
 export async function createRouter(
   options: RouterOptions,
 ): Promise<express.Router> {
   const { logger, catalogClient, database, auth } = options;
   const router = Router();
-
+ 
   const apiPlatformStore = await DatabaseApiPlatformStore.create({
     database,
     skipMigrations: false,
@@ -63,64 +63,76 @@ export async function createRouter(
     catalogClient,
     auth
   });
-
+ 
   router.use(express.json());
-
+ 
+  // Endpoints: /apis
+ 
   router.get('/apis', async (_req, res) => {
     res.json(await apiPlatformService.listApis());
   });
-
+ 
   router.get('/apis/:apiName', async (req, res) => {
     res.json(await apiPlatformService.getApiVersions({ apiName: req.params.apiName }));
   });
-
+ 
   router.get('/apis/:apiName/:apiVersion', async (req, res) => {
     res.json(await apiPlatformService.getApiMatchingVersion({ apiName: req.params.apiName, apiVersion: req.params.apiVersion }));
   });
-
-  router.post('/locations', async (req, res) => {
+ 
+  // Endpoints: /catalog
+ 
+  router.post('/catalog', async (req, res) => {
     validateRequestBody(req);
-    const request = req.body;
-    if (!request) {
+    const target = req.body;
+    if (!target) {
       throw new InputError('Invalid request body');
     }
-    res.status(201).json(await catalogPlatformService.registerCatalogInfo(request));
+    res.status(201).json(await catalogPlatformService.registerCatalogInfo(target));
   });
-
+ 
+  // Endpoints: /services
+ 
   router.get('/services', async (_req, res) => {
     res.json(await servicePlatformService.listServices());
   });
-
+ 
   router.get('/services/:serviceName', async (req, res) => {
     res.json(await servicePlatformService.getServiceVersions({ serviceName: req.params.serviceName }));
   });
-
-  router.get('/services/:serviceName/:serviceVersion/:containerVersion', async (req, res) => {
-    res.json(await servicePlatformService.getServiceApis({
+ 
+  // Exposed endpoints: /services
+ 
+  router.get('/service-informations/:serviceName/:serviceVersion/:containerVersion', async (req, res) => {
+    const info = await servicePlatformService.getServiceInformation({
       serviceName: req.params.serviceName,
       serviceVersion: req.params.serviceVersion,
       containerVersion: req.params.containerVersion,
-    }));
+    });
+    if (info) {
+      res.json(info);
+    } else {
+      res.status(404).json();
+    }
   });
-
-  router.post('/services/:serviceName/:serviceVersion/:containerVersion', async (req, res) => {
-    const apis: ServiceApisDefinition = req.body;
-    res.status(201).json(await servicePlatformService.addServiceApis({
-      serviceName: req.params.serviceName,
-      serviceVersion: req.params.serviceVersion,
-      containerVersion: req.params.containerVersion,
-      consumedApis: apis.consumedApis,
-      providedApis: apis.providedApis
-    }));
+ 
+  router.post('/service-informations', async (req, res) => {
+    const serviceInformation: ServiceInformation = req.body;
+    logger.info("POST service-informations", serviceInformation);
+    res.status(201).json(await servicePlatformService.addServiceInformation({ serviceInformation }));
   });
-
+ 
+  // Endpoints: /systems
+ 
   router.get('/systems', async (_req, res) => {
     res.json(await systemPlatformService.listSystems());
   });
-
+ 
   router.get('/systems/:systemName', async (req, res) => {
     res.json(await systemPlatformService.getSystem({ systemName: req.params.systemName }));
   });
-
+ 
+  //
+ 
   return router;
 }
