# plugins/api-platform-common/src/types.ts
@@ -15,11 +15,11 @@ export type ServiceEnvironmentDefinition = {
 export type ServiceVersionDefinition = {
   version: string;
   environments: {
-    tst?: ServiceEnvironmentDefinition,
-    gtu?: ServiceEnvironmentDefinition,
-    uat?: ServiceEnvironmentDefinition,
-    ptp?: ServiceEnvironmentDefinition,
-    prd?: ServiceEnvironmentDefinition,
+    tst?: ServiceEnvironmentDefinition;
+    gtu?: ServiceEnvironmentDefinition;
+    uat?: ServiceEnvironmentDefinition;
+    ptp?: ServiceEnvironmentDefinition;
+    prd?: ServiceEnvironmentDefinition;
   };
 }
 
@@ -30,12 +30,23 @@ export type ServiceDefinition = {
 };
 
 export type ServiceApisDefinition = {
-  consumedApis?: string[],
-  providedApis?: string[],
+  consumedApis?: string[];
+  providedApis?: string[];
 }
 
 export type SystemDefinition = {
   entity: Entity;
-  apis: string[],
-  services: string[]
+  apis: string[];
+  services: string[];
 };
+
+export type ServiceInformation = {
+  applicationCode: string;
+  serviceName: string;
+  serviceVersion: string;
+  containerName: string;
+  containerVersion: string;
+  repository: string;
+  sonarQubeProjectKey: string;
+  apiDependencies: ServiceApisDefinition;
+}
